crates/aranya-policy-lang/tests/data/invalid_text/escaped_nul_byte.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
assertion_line: 99
expression: err
---
error: Invalid string
  |
1 | let x = "a\x00b"
  |         ^^^^^^^^ string contained nul byte
